funciona! aunque faltan los menús aún...

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
-baseURL = "http://example.org"
-title = "Hugo Zdoc Theme"
+baseURL = ""
+title = "Apuntes YoC+"
 theme = "zdoc"
 
 defaultContentLanguage = "en"
