zdoc ahora siiii

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,5 @@
 	branch = master
 [submodule "themes/zdoc"]
 	path = themes/zdoc
-	url = https://github.com/zzossig/hugo-theme-zzo.git
+	url = git@github.com:zzossig/hugo-theme-zdoc
+	branch = master
